# ComfyUI-FilmEmulator

./: LICENSE  README.md  pyproject.toml
ComfyUI-FilmEmulator/: __init__.py  film_emulator_node.py
ComfyUI-FilmEmulator/profiles/: fujifilm_astia_100f_rap100f.json  fujifilm_astia_100f_rap100f_char.csv  fujifilm_fujicolor_pro_160c.json  fujifilm_fujicolor_pro_160c_char.csv  fujifilm_fujicolor_pro_160s.json  fujifilm_fujicolor_pro_160s_char.csv  fujifilm_fujicolor_pro_400h.json  fujifilm_fujicolor_pro_400h_char.csv  fujifilm_fujicolor_pro_800z.json  fujifilm_fujicolor_pro_800z_char.csv  fujifilm_fujicolor_superia_100.json  fujifilm_fujicolor_superia_100_char.csv  fujifilm_fujicolor_superia_200.json  fujifilm_fujicolor_superia_200_char.csv  fujifilm_fujicolor_superia_reala_100.json  fujifilm_fujicolor_superia_reala_100_char.csv  fujifilm_provia_100f_rdpiii.json  fujifilm_provia_100f_rdpiii_char.csv  fujifilm_provia_400f_rhpiii.json  fujifilm_provia_400f_rhpiii_char.csv  fujifilm_velvia_100_rvp100.json  fujifilm_velvia_100_rvp100_char.csv  fujifilm_velvia_50_rvp.json  fujifilm_velvia_50_rvp_char.csv  kodak_ektachrome_100g.json  kodak_ektachrome_100g_char.csv  kodak_ektar_100.json  kodak_ektar_100_char.csv  kodak_gold_200.json  kodak_gold_200_char.csv  kodak_portra_160.json  kodak_portra_160_char.csv  kodak_portra_400.json  kodak_portra_400_char.csv  kodak_portra_800.json  kodak_portra_800_char.csv  polaroid_t-339.json  polaroid_t-339_char.csv  polaroid_t-669.json  polaroid_t-669_char.csv
