[project]
name = "ComfyUI-FilmEmulator"
description = "A professional-grade imaging pipeline designed to Dehance sterile, microscopically sharp digital and AI-generated images into authentic analog photographs"
version = "1.0.2"
license = "MIT"

[project.urls]
Repository = "https://github.com/vadimcro/ComfyUI-FilmEmulator"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "vkriez"
DisplayName = "ComfyUI-FilmEmulator"
Icon = ""
